--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,42 @@
 <resources>
     <string name="app_name">Freehand</string>
+
+    <!--Fragment names-->
+    <string name="sign_out_fragment">Sign Out</string>
+    <string name="edit_profile_fragment">Edit Profile</string>
+    <string name="profile_fragment">Profile</string>
+
+
+    <!--dialog names-->
+    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
+
+    <!-- Firebase messages -->
+    <string name="auth_failed">Authentication failed.</string>
+    <string name="auth_success">Authentication success.</string>
+
+    <!--Firebase database fields-->
+    <string name="dnname_users">users</string>
+    <string name="field_email">email</string>
+    <string name="field_name">name</string>
+    <string name="field_age">age</string>
+    <string name="field_location">location</string>
+    <string name="field_description">description</string>
+    <string name="field_pictures_number">pictures_number</string>
+    <string name="field_profile_photo">profile_photo</string>
+
+
+
+    <string name="dnname_user_account_settings">user_account_settings</string>
+    <string name="field_username">username</string>
+    <string name="field_display_name">display_name</string>
+    <string name="field_website">website</string>
+    <string name="field_phone_number">phone_number</string>
+
+    <!--Intent Extras-->
+    <string name="calling_activity">calling_activity</string>
+
+    <!--Activity Names-->
+    <string name="profile_activity">Profile Activity</string>
+
+
 </resources>
