Added explore page functionality. Random users from the database get displayed in the explore page (does not display the current logged in user or the user that was just shown). Also added some error specific error messages that get displayed during login or register.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="auth_success">Authentication success.</string>
 
     <!--Firebase database fields-->
-    <string name="dnname_users">users</string>
+    <string name="dbname_users">users</string>
     <string name="dbname_user_photos">user_photos</string>
     <string name="field_email">email</string>
     <string name="field_name">name</string>
@@ -40,6 +40,12 @@
     <!--photo types-->
     <string name="new_photo">new_photo</string>
     <string name="profile_photo">profile_photo</string>
+
+    <!--image types-->
+    <string name="img_squareImageView">img_squareImageView</string>
+    <string name="img_imageView">img_imageView</string>
+
+
 
     <!--strings-->
     <string name="string_gallery">GALLERY</string>
