--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="sign_out_fragment">Sign Out</string>
     <string name="edit_profile_fragment">Edit Profile</string>
     <string name="profile_fragment">Profile</string>
+    <string name="chat_fragment">Chat</string>
+    <string name="private_chat_fragment">Private Chat</string>
 
 
     <!--dialog names-->
