--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,9 @@
     <string name="selected_image">selected_image</string>
     <string name="selected_bitmap">selected_bitmap</string>
     <string name="return_to_fragment">return_to_fragment</string>
+    <string name="chat_id">chat_id</string>
+    <string name="person_name">person_name</string>
+
 
     <!--Activity Names-->
     <string name="profile_activity">Profile Activity</string>
