--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <!--dialog names-->
     <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
+    <string name="brush_settings_dialog">BrushSettingsDialog</string>
 
     <!-- Firebase messages -->
     <string name="auth_failed">Authentication failed.</string>
@@ -57,10 +58,15 @@
 
     <!--strings-->
     <string name="string_gallery">GALLERY</string>
-    <string name="string_photo">PHOTO</string>
+    <string name="string_camera">CAMERA</string>
     <string name="string_open_camera">OPEN CAMERA</string>
     <string name="string_select">Select</string>
     <string name="string_upload">Upload</string>
+    <string name="string_done">Done</string>
+    <string name="string_cancel">Cancel</string>
+    <string name="string_brush_size">Brush Size</string>
+
+
 
 
 </resources>
