Added a close button to drawing space (disappears when user is drawing). Added ability to send drawings (drawings are saved in the database). Next steps: display sent drawings in private chat.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,9 @@
     <string name="return_to_fragment">return_to_fragment</string>
     <string name="chat_id">chat_id</string>
     <string name="person_name">person_name</string>
+    <string name="other_user_id">other_user_id</string>
+
+
 
 
     <!--Activity Names-->
