--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,12 @@
     <string name="string_done">Done</string>
     <string name="string_cancel">Cancel</string>
     <string name="string_brush_size">Brush Size</string>
+    <string name="string_login">Login</string>
+    <string name="string_email">Email</string>
+    <string name="string_password">Password</string>
+    <string name="string_create_an_account">Create an account</string>
+
+
 
 
 
