--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="dbname_user_photos">user_photos</string>
     <string name="dbname_chats">chats</string>
     <string name="dbname_user_chats">user_chats</string>
+    <string name="dbname_user_likes">user_likes</string>
     <string name="field_email">email</string>
     <string name="field_name">name</string>
     <string name="field_age">age</string>
@@ -73,6 +74,7 @@
     <string name="string_password">Password</string>
     <string name="string_no_account_yet">No account yet?\u0020</string>
     <string name="string_signup">Sign up</string>
+    <string name="string_settings">Settings</string>
 
     <!--toasts-->
     <string name="toast_fill_out_all_fields">All fields must be filled out</string>
