Updated the Settings page so that users can update their email and change their password. To fix: Users can upload some larger images to firebase but the app still crashes often enough due to an out of memory error. Also, the images should be saved with better quality. The app also sometimes crashes when images from the gallery are loaded to be displayed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!--Fragment names-->
     <string name="sign_out_fragment">Sign Out</string>
     <string name="edit_profile_fragment">Edit Profile</string>
+    <string name="account_fragment">Account Settings</string>
     <string name="profile_fragment">Profile</string>
     <string name="chat_fragment">Chat</string>
     <string name="private_chat_fragment">Private Chat</string>
@@ -75,6 +76,9 @@
     <string name="string_no_account_yet">No account yet?\u0020</string>
     <string name="string_signup">Sign up</string>
     <string name="string_settings">Settings</string>
+    <string name="string_drawing_space">Drawing Space</string>
+    <string name="string_confirm">Confirm</string>
+    <string name="string_change_email_to">Change Email to:</string>
 
     <!--toasts-->
     <string name="toast_fill_out_all_fields">All fields must be filled out</string>
