Made several improvements to the Upload page (compresses images differently based on their size). Added forgot password option on Login page. Images in the gallery and in the profile are displayed in reverse order. Added a new colour picker and brush opacity to the drawing space. Drawing space checks for permissions when a user tries to save a drawing to their Gallery. Any "age" inputs only accept integer values.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="string_done">Done</string>
     <string name="string_cancel">Cancel</string>
     <string name="string_brush_size">Brush Size</string>
+    <string name="string_brush_opacity">Brush Opacity</string>
     <string name="string_login">Login</string>
     <string name="string_email">Email</string>
     <string name="string_password">Password</string>
@@ -79,6 +80,9 @@
     <string name="string_drawing_space">Drawing Space</string>
     <string name="string_confirm">Confirm</string>
     <string name="string_change_email_to">Change Email to:</string>
+
+
+
 
     <!--toasts-->
     <string name="toast_fill_out_all_fields">All fields must be filled out</string>
